<resources>
    <string name="app_name">Study Buddy</string>
    <string name="login_button">Login</string>
    <string name="username_text">Username</string>
    <string name="create_user_button">Create New User</string>
    <string name="create_user_header">Enter Your Username:</string>
    <string name="user_exists_error">User with the given name already exists!</string>
    <string name="add_flashCard_button">Add Flashcard</string>
    <string name="flashcard_created">Flashcard Created</string>
    <string name="view_flashCard_button">View Flashcards</string>
    <string name="no_users">No users to display</string>
    <string name="no_selection_login_attempt">Please select a user first</string>
    <string name="home_welcome_header">Welcome to Study Buddy</string>
    <string name="flashCard_question_header">Enter The Question Here:</string>
    <string name="flashCard_answer_header">Enter The Answer Here:</string>
    <string name="create_flashCard_button">Create:</string>
    <string name="duplicate_flashCard">A flashcard with this question already exists.</string>
    <string name="textview">TextView</string>
    <string name="user_welcome">Hello, %1$s!</string>
    <string name="no_flashcards">You have no flashcards yet</string>
    <string name="start_quiz_button">Start Quiz</string>
    <string name="next_question">Next Question</string>
    <string name="show_answer">Show Answer</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="end_quiz">End Quiz</string>
    <string name="no_flashcards_quiz_start_error">You need to create flashcards first!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="flashcard_deleted">Flashcard successfully deleted</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="save_flashcard">Save</string>
    <string name="cancel_edit_flashcard">Cancel</string>
    <string name="enter_edit_question">Enter Question</string>
    <string name="enter_edit_answer">Enter Answer</string>
    <string name="flashcard_empty_values">Questions and answers cannot be empty</string>
    <string name="Answer">Answer</string>
    <string name="Question">Question</string>
    <string name="quiz_result">You got X out of Y correct!</string>
    <string name="quiz_completed">Quiz Completed!</string>
    <string name="return_to_home">Return to Home</string>
</resources>