<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.FlashcardItem">

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question"
        android:textSize="24sp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Answer"
        android:textSize="20sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/textQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/EditFlashcardButton"
        android:layout_width="162dp"
        android:layout_height="78dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAnswer"
        app:layout_constraintVertical_bias="0.59"
        android:onClick="buttonEditFlashcardOnClick"/>

    <Button
        android:id="@+id/DeleteFlashcardButton"
        android:layout_width="162dp"
        android:layout_height="78dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        android:onClick="buttonDeleteFlashcardOnClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>
