<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/editQuestion"
        android:layout_width="1242dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:autofillHints="question"
        android:hint="@string/enter_edit_question"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAnswer"
        android:autofillHints="question"
        android:inputType="text"
        android:layout_width="1245dp"
        android:layout_height="106dp"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_edit_answer"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editQuestion" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="260dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:onClick="buttonSaveFlashcardOnClick"
        android:text="@string/save_flashcard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAnswer"
        app:layout_constraintVertical_bias="0.383" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="260dp"
        android:layout_height="71dp"
        android:text="@string/cancel_edit_flashcard"
        android:onClick="buttonCancelFlashcardOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

</androidx.constraintlayout.widget.ConstraintLayout>
