<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcom_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/viewFlashcardsButton2"
        android:layout_width="236dp"
        android:layout_height="64dp"
        android:onClick="buttonViewFlashcardOnClick"
        android:text="@string/view_flashCard_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="537dp"
        android:layout_height="78dp"
        android:text="@string/home_welcome_header"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <Button
        android:id="@+id/viewFlashcardsButton"
        android:layout_width="236dp"
        android:layout_height="64dp"
        android:text="@string/view_flashCard_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569"
        android:onClick="buttonViewFlashcardOnClick"/>

    <Button
        android:id="@+id/addFlashcardButton"
        android:layout_width="236dp"
        android:layout_height="64dp"
        android:onClick="buttonAddFlashCardOnClick"
        android:text="@string/add_flashCard_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />

    <Button
        android:id="@+id/startQuizButton"
        android:layout_width="237dp"
        android:layout_height="64dp"
        android:onClick="buttonStartQuizOnClick"
        android:text="@string/start_quiz_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827" />

</androidx.constraintlayout.widget.ConstraintLayout>