<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CreateFlashcardActivity">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createFlashcardQuestion_textbox"
        android:layout_width="270dp"
        android:layout_height="64dp"
        android:hint="@string/flashCard_question_header"
        android:textColor="#4A3A3A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <Button
        android:id="@+id/createFlashcardButton"
        android:layout_width="180dp"
        android:layout_height="67dp"
        android:layout_marginBottom="40dp"
        android:text="@string/create_flashCard_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918"
        android:onClick="buttonCreateFlashCardOnClick" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createFlashcardAnswer_textbox"
        android:layout_width="270dp"
        android:layout_height="64dp"
        android:hint="@string/flashCard_answer_header"
        android:textColor="#4A3A3A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

</androidx.constraintlayout.widget.ConstraintLayout>
